--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+Properties/PublishProfiles
+Properties/ServiceDependencies
+Properties/ServiceDependencies.json
+Properties/ServiceDependencies.JsonMapper
+Properties/ServiceDependencies.local.json
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
